--- a/src/www/common.css
+++ b/src/www/common.css
@@ -1,4 +1,9 @@
-
-*:focus{
+*:focus {
     outline: none;
+}
+.box-shadow {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+.drop-shadow {
+    filter: drop-shadow(0 0 0.8rem rgba(50, 50, 93, 0.25));
 }
