--- a/src/www/common.css
+++ b/src/www/common.css
@@ -1,3 +1,10 @@
+body {
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 *:focus {
     outline: none;
 }
